fix: Overflow definition to code

--- a/src/assets/css/partials/_posts.scss
+++ b/src/assets/css/partials/_posts.scss
@@ -145,7 +145,7 @@
                 text-align: left;
                 white-space: pre;
                 word-spacing: normal;
-                word-break: normal;
+                overflow-wrap: break-word;
                 border-radius: 0.3em;
                 margin: 0 0.25rem;
                 line-height: 1.0;
