--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -802,7 +802,7 @@ body {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
-  word-break: normal;
+  overflow-wrap: break-word;
   border-radius: 0.3em;
   margin: 0 0.25rem;
   line-height: 1;
